rust/herb-highlighter/tests/snapshots/diff_document_test__ansi_diff_is_byte_identical_through_the_document_path-2.snap
---
source: herb-highlighter/tests/diff_document_test.rs
expression: "highlighter.highlight_diff(PATH, DIFF_BEFORE, DIFF_AFTER, &DiffRenderOptions\n{ single_line_style: SingleLineStyle::Inline, ..Default::default() },)"
---
[36mapp/views/users/show.html.erb[0m

    [90m  1[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  2[0m [90m│[0m [2m  [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mone[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
[33m  ± [0m[1m  3[0m [90m│[0m   [38;2;224;108;117m<[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m[38;2;171;178;191mt[0m[38;2;171;178;191m[48;2;107;46;49mwo[0m[38;2;171;178;191m[48;2;46;94;61mres[0m[38;2;224;108;117m</[0m[38;2;224;108;117mp[0m[38;2;224;108;117m>[0m
    [90m  4[0m [90m│[0m [2m  [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mtail[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  5[0m [90m│[0m [2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
