rust/herb-highlighter/tests/snapshots/diff_document_test__ansi_diff_is_byte_identical_through_the_document_path.snap
---
source: herb-highlighter/tests/diff_document_test.rs
expression: "highlighter.highlight_diff(PATH, DIFF_BEFORE, DIFF_AFTER,\n&DiffRenderOptions::default())"
---
[36mapp/views/users/show.html.erb[0m

    [90m  1[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  2[0m [90m│[0m [2m  [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mone[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
[31m  - [0m[1m  3[0m [90m│[0m [48;2;58;34;36m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;58;34;36mp[0m[38;2;224;108;117m[48;2;58;34;36m>[0m[38;2;171;178;191m[48;2;58;34;36mt[48;2;107;46;49mwo[0m[38;2;224;108;117m[48;2;58;34;36m</[0m[38;2;224;108;117m[48;2;58;34;36mp[0m[38;2;224;108;117m[48;2;58;34;36m>[0m
[32m  + [0m    [90m│[0m [48;2;30;50;38m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;30;50;38mp[0m[38;2;224;108;117m[48;2;30;50;38m>[0m[38;2;171;178;191m[48;2;30;50;38mt[48;2;46;94;61mres[0m[38;2;224;108;117m[48;2;30;50;38m</[0m[38;2;224;108;117m[48;2;30;50;38mp[0m[38;2;224;108;117m[48;2;30;50;38m>[0m
    [90m  4[0m [90m│[0m [2m  [22m[2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mtail[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mspan[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
    [90m  5[0m [90m│[0m [2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
