rust/herb-highlighter/tests/snapshots/diff_document_test__renders_a_unified_diff.snap
---
source: herb-highlighter/tests/diff_document_test.rs
expression: "render_document_html(&document, &sink_options(DiffLayout::Unified))"
---
<figure class="herb-highlight herb-diff" data-herb-theme="onedark">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line herb-diff-context" data-old-line="1" data-new-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">ul</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-removed" data-old-line="2"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><mark class="herb-diff-inline-removed"><span class="herb-token-identifier">a</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-added" data-new-line="2"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><mark class="herb-diff-inline-added"><span class="herb-token-identifier">A</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-context" data-old-line="3" data-new-line="3"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">b</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-hunk-separator"></span>
<span class="herb-line herb-diff-context" data-old-line="7" data-new-line="7"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">f</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-removed" data-old-line="8"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><mark class="herb-diff-inline-removed"><span class="herb-token-identifier">g</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-added" data-new-line="8"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span><mark class="herb-diff-inline-added"><span class="herb-token-identifier">G</span></mark><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">li</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line herb-diff-context" data-old-line="9" data-new-line="9"><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">ul</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
